# instance-manager

./: .env.test  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
config/: __init__.py  base.py  local.py  test.py
docs/adr/: 0001-record-architecture-decisions.md  0002-use-fastapi-web-framework.md  0003-use-kubernetes-for-deploying-instances.md  0004-in-memory-sqlite-database.md
gestor/: main.py  manager.py
gestor/crud/: instances.py
gestor/kubernetes/: deployment.yaml  ingress.yaml  kustomization.mako  kustomization.yaml  service.yaml
gestor/models/: git.py  instance.py  instances.py
gestor/routers/: api.py  webhooks.py
gestor/schemas/: git.py  instance.py  instances.py
gestor/utils/: database.py  decorators.py  github.py  kubernetes.py
tests/: __init__.py  test_github.py  test_instance.py  test_kubernetes.py  test_main.py  test_manager.py  test_settings.py
tests/files/: kustomization.mako
