[tool.poetry]
name = "instance-manager"
version = "0.1.0"
description = "OpenERP instance manager"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.93.0,<0.94.0"
pydantic = ">=1.10.6,<1.11.0"
sqlalchemy = ">=2.0.5.post1,<2.1.0"
aiohttp = ">=3.8.4,<3.9.0"
mako = ">=1.2.4,<1.3.0"
shortuuid = ">=1.0.11,<1.1.0"
uvicorn = ">=0.21.0,<0.22.0"
kubernetes = ">=26.1.0,<26.2.0"
python-dotenv = ">=1.0.0,<1.1.0"
kubernetes-asyncio = ">=24.2.2,<24.3.0"
httpx = "^0.23.3"
paramiko = "^3.1.0"
websockets = "^11.0"
PyGithub = "^1.58.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2,<7.3.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
